2020-06-03  Yasuhiro KIMURA  <yasu@utahime.org>

	* 45950: configure.ac: Fix 'make install' in out-of-tree
	tarball builds.

2020-06-01  Matthew Martin  <phy1729@gmail.com>

	* 45940: Completion/BSD/Command/_kdump,
	Completion/BSD/Command/_ktrace,
	Completion/BSD/Type/_ktrace_points: Add _kdump and _ktrace
	completers and supporting _ktrace_points type.

	* 45939: Completion/Linux/Command/_ionice,
	Completion/Unix/Command/_lsof, Completion/Unix/Command/_pgrep,
	Completion/Unix/Command/_renice, Completion/Unix/Type/_pgids:
	Add _pgids type.

2020-06-01  Doron Behar  <doron.behar@gmail.com>

	* gitlab !14: Completion/Linux/Command/_modutils: modutils
	completion: Fix getting the value of kver from opt_args

2020-05-30  Bart Schaefer  <schaefer@zsh.org>

	* 45915: Src/utils.c: fix handling of hyphens in spckword()

2020-05-28  Yasuhiro KIMURA  <yasu@utahime.org>

	* 45934: Completion/Unix/Command/_subversion: Make 'svnliteadmin'
	completed same as 'svnadmin'

2020-05-28  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Util/zyodl.vim: Highlight the word "note", like
	ft=help does.

	* unposted: Util/zyodl.vim: Highlight yodl continuation line
	marker

	* 45923 (with memory leak fixed, cf. 45924): Src/Modules/zprof.c,
	Src/exec.c: zprof: Don't tally all anonymous functions as though
	they were a single function named "(anon)".

2020-05-23  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 45900: Src/lex.c, Test/D04parameter.ztst: Fix issues with
	escaped newline in $-substitution.

2020-05-21  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 45884 (Oliver's, edited by me): Etc/BUGS: Add a few entries.

2020-05-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 45862: Test/D04parameter.ztst: Add test cases for 45843#1
	and 45843#2, adapted from Aaron Esau and pws.

2020-05-17  Eitan Adler <lists@eitanadler.com>

	* Eitan Adler: unposted: config.guess, config.sub: update to
	2020-04-26.

2020-05-17  Matthew Martin  <phy1729@gmail.com>
